force-app/main/default/objects/ICP__c/fields/Boolean_indicating_if_the_record_is_arch__c.field-meta.xml
<CustomField>
    <fullName>Boolean_indicating_if_the_record_is_arch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Boolean indicating if the record is archived (possibly redundant, as it&apos;s listed twice).</inlineHelpText>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>