force-app/main/default/objects/ICP__c/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <inlineHelpText>Number of employees working for the customer.</inlineHelpText>
    <label>Employee Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>