force-app/main/default/objects/ICP__c/fields/Insert_Date__c.field-meta.xml
<CustomField>
    <fullName>Insert_Date__c</fullName>
    <inlineHelpText>The date when the record was inserted or added</inlineHelpText>
    <label>Insert Date</label>
    <type>Date</type>
</CustomField>