force-app/main/default/objects/ICP__c/fields/Job_Title_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Function__c</fullName>
    <label>Job Title Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>