force-app/main/default/objects/ICP__c/fields/Job_Title_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Seniority__c</fullName>
    <inlineHelpText>The seniority level associated with the job title (e.g., junior, senior, manager).</inlineHelpText>
    <label>Job Title Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>