force-app/main/default/objects/ICP__c/fields/Kanlet_License__c.field-meta.xml
<CustomField>
    <fullName>Kanlet_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kanlet License</label>
    <referenceTo>Kanlet_License__c</referenceTo>
    <relationshipLabel>ICP</relationshipLabel>
    <relationshipName>ICP</relationshipName>
    <type>Lookup</type>
</CustomField>