force-app/main/default/objects/ICP__c/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <inlineHelpText>The state or province where the company is located</inlineHelpText>
    <label>Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>