force-app/main/default/objects/ICP__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <inlineHelpText>The financial income or earnings of the company.</inlineHelpText>
    <label>Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>