force-app/main/default/objects/ICP__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <inlineHelpText>Technologies or software used by the customer.</inlineHelpText>
    <label>Tech Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>