force-app/main/default/objects/ICP__c/fields/User_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Unique_Id__c</fullName>
    <inlineHelpText>Unique identifier for each record</inlineHelpText>
    <label>User Unique Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>